templates/Volume-policy/denyPrivileged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPrivilegedContainer
metadata:
  name: block-privilege-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
