templates/Volume-policy/encryptedStoreClass-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEncrypted
metadata:
  name: block-privilege-container
spec:
  match:
    kinds:
      - apiGroups: ["storage.k8s.io"]
        kinds: ["StorageClass"]
