templates/Volume-policy/retainPolicyDeny-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockRetain
metadata:
  name: blockretain
spec:
  match:
    kinds:
      - apiGroups: ["storage.k8s.io"]
        kinds: ["StorageClass"]
